--- a/Day1/style.css
+++ b/Day1/style.css
@@ -6,9 +6,13 @@ td {
     text-align: center;
 }
 
-input {
+#cal-show{
     text-align: right;
     border: none;
+}
+
+input {
+    text-align: center;
 }
 input:focus {
     outline: none;
