--- a/Day1/style.css
+++ b/Day1/style.css
@@ -1,11 +1,3 @@
-table {
-    border-collapse: collapse;
-}
-td {
-    padding: 5px 10px;
-    text-align: center;
-}
-
 #cal-show{
     text-align: right;
     border: none;
@@ -13,6 +5,8 @@ td {
 
 input {
     text-align: center;
+    height: 100%;
+    width: 100%;
 }
 input:focus {
     outline: none;
